# doqqy

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-analysis.yml
docs/: API-ARCHITECTURE.md  ARCHITECTURE.md  DEVELOPER-HANDOVER.md  README.md  ROADMAP.md  USAGE.md  VECTOR-STORE-ADAPTERS.md
documentation/: GELISTIRME.md  KULLANIM.md  MIMARI.md  README.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/fazlar/: README.md  faz1.md  faz2.md  faz3.md  faz4.md  faz5.md  faz6.md
src/docq/: __init__.py  __main__.py  chunk.py  cli.py  config.py  embed.py  index_gen.py  map_gen.py  query.py  rerank.py  wikilink_inject.py
src/docq/ingest/: __init__.py  base.py  docx_ingest.py  md_ingest.py  pdf_ingest.py  router.py
src/doqqy/: __init__.py  __main__.py  chunk.py  cli.py  config.py  embed.py  index_gen.py  manifest.py  map_gen.py  mcp_server.py  query.py  rerank.py  sync.py  wikilink_inject.py  workspace.py
src/doqqy/infra/: settings.py
src/doqqy/ingest/: __init__.py  base.py  csv_ingest.py  docx_ingest.py  html_ingest.py  md_ingest.py  pdf_ingest.py  pptx_ingest.py  router.py  xlsx_ingest.py  xml_ingest.py
testdocs/DATABASES/: PRISMA.md
testdocs/DIAGRAMS/: ER.md  SEQUENCE.md  USE-CASE.md
testdocs/ERIMELEKTRONIK/: CARI_REQUIREMENTS.md  HAREKETLER_(FİNANSAL AKIŞ)_REQUIREMENTS.md  LOGIN_REQUIREMENTS.md  PAYTR_REQUIREMENTS.md  PRD.md  SEPETIM_REQUIREMENTS.md  SIPARIS_REQUIREMENTS.md  STOK_REQUIREMENTS.md  tablolara_doğru.txt
testdocs/ERP12/: DATABASE_MANAGEMENT.md  ERP_TABLES.md
testdocs/GENERAL/: API_ROUTES.md  ENVIRONMENT.md  MULTI_TENANCY.md  PRD.md  TECH_STACK.md  UI_UX_GUIDE.md
testdocs/PAYTR/: paytr_dokumanlari.md
testdocs/PAYTR/PayTRDocsDetail/: API-Servis-Test-Araclari.md  Acik-Kaynakli-Altyapilar.md  BKM-Express-Entegrasyonu.md  Direkt-API-Entegrasyonu.md  Durum-Sorgu-API-Entegrasyonu.md  HavaleEFT-iFrame-API.md  Hazir-Altyapilar.md  Link-API-Entegrasyonu.md  NeoPOS-Bridge-Kurulumu-ve-Entegrasyonu.md  PayTR-Hata-Kodlari.md  PayTR-Kullanmaya-Baslarken.md  Platform-Transfer-Talebi.md  Satis-ve-İade-İslem-Dokumu-Servisi.md  Sikca-Sorulan-Sorular.md  iFrame-API-Entegrasyonu.md  Ödeme-Rapor-Servisi.md  Ön-Provizyon-Entegrasyonu.md  İade-API-Entegrasyonu.md
testdocs/PHASES/ip1/: faz-0-yerel-ortamın-kurulmasi.md  faz-1-config-schema.md
testdocs/PROCEDURES/: Ekle_CariAdres.txt  Ekle_CariKart.txt  Ekle_Siparis.txt  Ekle_Siparis_Detay.txt
tests/: test_chunk.py  test_map_gen.py  test_mcp_integration.py  test_md_ingest.py  test_rerank.py  test_rrf.py  test_tag_sanitization.py  test_tag_validation.py  test_tags.py  test_wikilink_inject.py  test_workspace.py
tests/integration/: test_pipeline.py  test_sync_integration.py
tests/unit/: test_manifest.py  test_query.py  test_sync.py
tests/unit/ingest/: test_csv_ingest.py  (+6 more)
(+154 files in other folders)
