[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doqqy"
version = "0.1.3"
description = "Yerel doküman bilgi sistemi — hibrit semantik+lexical arama + harita üretimi."
requires-python = ">=3.10"
readme = { text = "Bkz. memory-bank/", content-type = "text/plain" }
dependencies = [
    # Core
    "typer>=0.12",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "rich>=13.7",

    # Ingest
    "docling>=2.0",
    "pymupdf4llm>=0.0.17",
    "pypandoc>=1.13",          # pandoc binary'sini sarar; binary kurulu değilse mammoth fallback
    "mammoth>=1.8",
    "python-frontmatter>=1.1",

    # Chunking
    "langchain-text-splitters>=0.3",

    # Embedding + vector store
    "FlagEmbedding>=1.3",
    "lancedb>=0.13",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
llm = [
    "google-genai>=0.3",
    "anthropic>=0.40",
]

[project.scripts]
doqqy = "doqqy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"doqqy" = ["py.typed"]
