[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doqqy"
dynamic = ["version"]
description = "Yerel doküman bilgi sistemi — hibrit semantik+lexical arama + harita üretimi."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # Core
    "typer>=0.12",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "rich>=13.7",

    # Ingest
    "docling>=2.0",
    "pymupdf4llm>=0.0.17",
    "pypandoc>=1.13",          # pandoc binary'sini sarar; binary kurulu değilse mammoth fallback
    "mammoth>=1.8",
    "python-frontmatter>=1.1",
    "beautifulsoup4>=4.12",
    "markdownify>=1.2",

    # Chunking
    "langchain-text-splitters>=0.3",

    # Embedding + vector store
    "FlagEmbedding>=1.3",
    "lancedb>=0.13",
    "pylance>=0.11",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "numpy>=1.26",

    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
llm = [
    "google-genai>=0.3",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.15,<0.16",     # CI ile aynı linter sürümü; minor'a pinli ki yeni kurallar CI'ı kırmasın
]

[project.scripts]
doqqy = "doqqy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"doqqy" = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "slow: marks integration tests that are slower to run",
]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "BLE", "PLC"]
ignore = [
    "B008",         # Typer tasarımsal zorunluluğu için bunu kapat
    "PLC0415"       # Projedeki mevcut local import tercihini meşrulaştırmak için
]

[tool.setuptools.dynamic]
version = { attr = "doqqy.__version__" }
